# iMXRT1060

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakePresets.json  README.md  flags.cmake  iMXRT1060_Debug.ld  mcux_include.json
docs/: 00-index.md  01-arch.md  01-prepare.md  02-POST.md  _config.yml
src/02_mcal/: Mcal_board.cpp
src/02_mcal/hal/: Mcal_Watchdog.cpp  Mcal_Watchdog.hpp  Mcal_board.cpp  Mcal_board.hpp  Mcal_post.cpp  Mcal_post.hpp
src/03_os/: FreeRTOSConfig.h  Osal_freertos.cpp  Osal_rtos.hpp
src/04_services/: Svl_logger.cpp  Svl_logger.hpp  svl_healthMonitor.cpp  svl_healthMonitor.hpp  svl_postManager.cpp  svl_postManager.hpp
src/04_services/config/: mcux_config.h
src/05_app/: appTask.cpp  appTask.hpp  main.cpp  post_manager.cpp  sysConfig.hpp
